# ChangeLog for media-gfx/eog
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/eog/ChangeLog,v 1.29 2003/03/11 00:39:50 foser Exp $

*eog-2.2.1 (10 Mar 2003)

  10 Mar 2003; foser <foser@gentoo.org> eog-2.2.1.ebuild :
  New version

  10 Feb 2003; Aron Griffis <agriffis@gentoo.org> eog-2.2.0.ebuild :
  Add ~alpha to KEYWORDS

*eog-2.2.0 (30 Jan 2003)

  01 Mar 2003; Jason Wever <weeve@gentoo.org> eog-2.2.0.ebuild:
  Added ~sparc to keywords.

  21 Feb 2003; Aron Griffis <agriffis@gentoo.org> eog-2.2.0.ebuild :
  Mark stable on Alpha

  30 Jan 2003; foser <foser@gentoo.org> eog-2.2.0.ebuild :
  GNOME 2.2 RC2 commit

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*eog-1.1.1 (01 Dec 2002)

  03 Dec 2002; Jon Nall <nall@gentoo.org> eog-1.1.1.ebuild :
  keyworded ~ppc

  01 Dec 2002; foser <foser@gentoo.org> eog-1.1.1.ebuild :
  forgotten 2.1.2 Commit

*eog-1.0.4 (28 Nov 2002)
  
  28 Nov 2002; Spider <spider@gentoo.org> eog-1.0.4.ebuild :
  SRC_URI fix, nothign much 

*eog-1.1.0 (27 Oct 2002)

  27 Oct 2002; foser <foser@gentoo.org> eog-1.1.0.ebuild :
  Gnome 2.1 commit

*eog-1.0.3 (06 Sep 2002)
 
  17 Sep 2002; Spider <spider@gentoo.org> eog-1.0.3.ebuild :  ppc keyword 
  addded 
  
  16 Sep 2002; Maarten Thibaut <murphy@gentoo.org> eog-1.0.3.ebuild : Adding
  sparc/sparc64 keywords. Revamping ChangeLog layout.

  06 Sep 2002; Spider <spider@gentoo.org> eog-1.0.3.ebuild : New version
  
*eog-1.0.2 (05 Aug 2002)

  05 Aug 2002; Spider <spider@gentoo.org> eog-1.0.2.ebuild : New version, tweaked deps
  
*eog-1.0.1 (27 Jun 2002)

  02 Aug 2002; Mark Guertin <gerk@gentoo.org> eog-1.0.1.ebuild :  Added ppc to keywords

  27 Jun 2002; Spider <spider@gentoo.org> eog-1.0.1-r2.ebuild : mirror:// code

*eog-1.0.1 (21 Jun 2002)

  21 Jun 2002; Spider <spider@gentoo.org> eog-1.0.1-r1.ebuild : Missed the librsvg dep 

*eog-1.0.1 (19 Jun 2002)
